# autoflight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  THE_ONE_RING.md  bootstrap.sh  pyproject.toml  requirements.txt
autoflight/: __init__.py  _ensure_deps.py  cli.py  config.py  exceptions.py  image_loader.py  orthomosaic.py  output.py  security.py  server.py  stitcher.py
autoflight/web/: index.html
scripts/: demo.sh  generate_sample_images.py  validate.sh
tests/: test_auto_install.py  test_modules.py  test_new_modules.py  test_orthomosaic.py  test_server.py
